...
          headerTintColor: colors.primary,
        })}
      >
        <Tab.Screen
          name="Home"
          component={DashboardScreen}
          options={{ title: 'Home', tabBarButtonTestID: 'homeTab' }}
        />
        <Tab.Screen name="Devices" component={DeviceListScreen} options={{ title: 'Devices' }} />
        <Tab.Screen name="Activity" component={ActivityScreen} options={{ title: 'Activity' }} />
        <Tab.Screen name="Progress" component={ParentDashboardScreen} options={{ title: 'Progress' }} />
        <Tab.Screen name="Profile" component={ProfileScreen} options={{ title: 'Profile' }} />
      </Tab.Navigator>
...
